# kota

./: .env.example  .gitignore  .kota_skills.json  Cargo.toml  LICENSE  README.md
.kota/: config.lua  config_example_commands.lua
.kota/skills/example/: SKILL.md
.kota/skills/rust-expert/: SKILL.md
.kota/tools/: calculator.lua  init.lua  string_transform.lua
guides/: lua_configuration.md
src/: hooks.rs  lib.rs  main.rs  plan.rs
src/agent/: mod.rs
src/kota_cli/: command.rs  command_registry.rs  executor.rs  mod.rs  render.rs  tab.rs  utils.rs
src/kota_code/: context.rs  mod.rs  skills.rs
src/kota_code/agent/: mod.rs
src/kota_code/mcp/: client.rs  mod.rs
src/kota_code/runtime/: config.rs  hooks.rs  mod.rs  tool_registry.rs
src/kota_code/runtime/dyn_tools_loader/: dyn_tool.rs  mod.rs
src/kota_code/tools/: edit_file.rs  execute_bash_command.rs  update_plan.rs
src/tools/: create_directory.rs  delete_file.rs  edit_file.rs  execute_bash_command.rs  grep_search.rs  mod.rs  read_file.rs  scan_codebase.rs  update_plan.rs  write_file.rs
tests/: lua_config_test.rs  test_command.rs  test_context.rs  test_lua_dyn_tool.rs
tests/tools/: test_edit_file.rs  test_read_file.rs  test_write_file.rs
