[package]
name = "kota"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
crossterm = "0.27"
colored = "2.0"
unicode-width = "0.1"
rig-core = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
patch-apply = "0.8"
