[package]
name = "kota"
version = "0.1.2"
edition = "2021"
authors = ["Stepfen Shawn <m18824909883@163.com>"]
license = "MIT"
description = "A lightweight ai code agent in Rust."
repository = "https://github.com/StepfenShawn/kota"

[[bin]]
name = "kota"
path = "src/main.rs"

[lib]
name = "kota"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
anyhow = "1.0"
rustyline = "14.0"
colored = "3.0.0"
rig-core = "0.28.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
patch-apply = "0.8.3"
regex = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
names = { version = "0.14.0", default-features = false }

[dev-dependencies]
tempfile = "3.0"
